style.css
@import url(https://fonts.googleapis.com/css?family=Fira+Mono);
@import url(https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css);

* {
  box-sizing: border-box;
}

html {
  overflow-x: hidden;
}

html,
body {
  height: 100%;
  font-size: 1em;
}

body {
  background: #F6F6F6;
  font-family: "Fira Mono", monospace;
  font-size: 1.5rem;
  padding-left: 20%;
  max-width: 85%;
  opacity: 1;
  transition: opacity 0.3s;
}

body.frosted {
  opacity: 0;
}

#profileimage {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  z-index: 999;
  pointer-events: none;
  transition: opacity 0.3s;
}

#profileimage span {
  display: none;
  cursor: pointer;
}

#profileimage img {
  position: absolute;
  opacity: 0.7;
  width: 50%;
  /*transition: all 0.1s ease-in;*/
  transition: opacity 0.3s;
}

#profileimage img, #profileimage span {
  pointer-events: all;
}

#profileimage img.left {
  left: 0;
  transform: translateX(-64%);
}

#profileimage img.right {
  top: 40%;
  margin-top: 2em;
  right: 0;
  transform: translateX(43%);
}

#profileimage.open {
  background-color: #eee;
  position: fixed;
  opacity: 0.7;
}

#profileimage.open.first {
  opacity: 1;
}

#profileimage.open span {
  display: block;
}

#profileimage.open.first span {
  display: none;
}

#profileimage.open img {
  opacity: 1;
  top: 0;
  margin-top: 0;
  width: 40%;
  left: 50%;
  transform: translateX(-50%);
}

#profileimage.hidden img {
  opacity: 0;
}

aside {
  font-size: 0.9em;
  padding: 1.3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
      -ms-flex-pack: end;
          justify-content: flex-end;
  position: absolute;
  z-index: 10;
  right: 0;
  top: 0;
  width: 10rem;
  min-height: 40%;
/*   background: #A7CDCC; */
  color: #004A55;
}

aside > .pulldown-pointer {
  width: 0;
  height: 0;
  border-left: 5rem solid transparent;
  border-right: 5rem solid transparent;
  border-top: 2rem solid #004A55;
  top: 0;
  z-index: 12;
  margin-left: -1.3rem;
  position: absolute;
  cursor: pointer;
}

aside > .pulldown {
  background-color: #004A55;
  color: #004A55;
  width: 100%;
  height: 0;
  opacity: 0;
  pointer-events: none;
  -webkit-transition: height 0.4s 0.25s, color 0.3s, opacity 0.33s;
  transition: height 0.4s 0.25s, color 0.3s, opacity 0.33s;
  position: absolute;
  margin-left: -1.3rem;
  margin-top: -1.3rem;
  top: 1.3rem;
  padding: 1rem;
  z-index: 13;
  overflow: hidden;
}

aside > .pulldown > span {
  color: #F87D09;
  cursor: pointer;
}

aside.open > .pulldown {
  opacity: 1;
  height: 100%;
  color: #F6F6F6;
  pointer-events: unset;
  -webkit-transition: height 0.4s, opacity 0.4s;
  transition: height 0.4s, opacity 0.4s;
}

aside > p a {
  color: #000;
}

aside > .pulldown a {
  text-decoration: none;
  color: #004A55;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}
aside.open > .pulldown a {
  color: #A7CDCC;
}

aside a:hover {
  text-decoration: underline;
  color: #A7CDCC;
}

aside a:active {
  color: #F87D09;
}

p.description {
  width: 90%;
}

blockquote {
  font-size: 0.7em;
  margin-left: 0em;
  padding-left: 2.5em;
  background-color: #eee;
}

blockquote > p > em, blockquote > p > strong {
  width: calc(100% + 2.5em);
  display: block;
  margin-left: -2.5em;
  padding-left: 2.5em;
}

/* --- */

em, strong {
  color: #777;
  font-style: italic;
  font-weight: 400;
  padding-right: 0.5rem;
}

/* spotlight mix */
em {
  background: #ddd;
}

/* special mix */
strong {
  background: #bbb;
}

/* --- */

h2 {
  color: #F87D09;
}

ul {
  list-style-type: none;
}

ul {
  counter-reset: listCounter;
}

ul > li::before {
  content: counter(listCounter);
  counter-increment: listCounter;
  position: absolute;
  margin-left: -1.5em;
  padding-right: 1.2em;
  font-size: .75em;
  color: #ddd;
  -webkit-transform: translate(-25%, 20%);
          transform: translate(-25%, 20%);
}

footer {
  height: 5rem;
  background-color: #111;
  color: #ccc;
  position: absolute;
  width: 100%;
  margin-left: -20%;
}

footer > span {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  font-size: 0.7em;
}

footer > span a {
  color: #ccc;
}

footer > span a:hover {
  color: #A7CDCC;
}

@media (max-width: 725px) {
  aside {
    position: relative;
    width: 100%;
    min-height: unset;
  }

  #profileimage {
    display: none;
  }
  
  body {
    max-width: 88%;
    padding-left: 12%;
  }

  body.frosted {
    opacity: 1;
  }
}

